[metadata]
name = hcra-context-manager
version = 0.1.0
description = Lightweight context manager with similarity search
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache-2.0
license_files = LICENSE
author = HCRA Contributors
url = https://example.com/hcra-context-manager
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    numpy
    tiktoken

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest
